# wgpu-external-memory

./: Cargo.toml  README.md  build.rs
examples/: adapters.rs  get_hal.rs
src/: adapter.rs  egl.rs  instance.rs  lib.rs  main.rs  vulkan.rs
src/imp/: mod.rs  vulkan.rs
src/imp/egl/: mod.rs
src/imp/vulkan/: dmabuf.rs  mod.rs
