[package]
name = "wgpu_external_memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { git = "https://github.com/i509VCB/wgpu/", branch = "hal/vk-phd-props" }
wgpu-core = { git = "https://github.com/i509VCB/wgpu/", branch = "hal/vk-phd-props" }
wgpu-hal = { git = "https://github.com/i509VCB/wgpu/", branch = "hal/vk-phd-props" }
thiserror = "1.0.31"

ash = "0.37"
bitflags = "1.3.2"
env_logger = "0.9.0"
pollster = "0.2.5"
log = "0.4.17"

nix = { version = "0.24.1", default-features = false }

[build-dependencies]
cfg_aliases = "0.1.1"
