[package]
name = "wgpu-drm"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { git = "https://github.com/i509VCB/wgpu/", branch = "egl-adapter-context" }
wgpu-core = { git = "https://github.com/i509VCB/wgpu/", branch = "egl-adapter-context" }
wgpu-hal = { git = "https://github.com/i509VCB/wgpu/", branch = "egl-adapter-context" }
thiserror = "1.0.31"

ash = "0.37"
bitflags = "1.3.2"
env_logger = "0.9.0"
pollster = "0.2.5"
log = "0.4.17"
drm-fourcc = "2.2.0"

glow = "0.11.2"

[dependencies.nix]
version = "0.24.1"
default-features = false
features = [
    "fs",
]

[build-dependencies]
cfg_aliases = "0.1.1"
